helloworld/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: helloworld-app-route
  labels:
    app: helloworld-app
    version: v2
spec:
  to:
    kind: Service
    name: helloworld-app-svc
    weight: 100
  port:
    targetPort: 3002
  wildcardPolicy: None
